# pytest-tutorial

./: pyproject.toml
src/: my_functions.py  shapes.py
tests/: conftest.py  test_circle.py  test_my_functions.py  test_rectangle.py  test_service.py  test_square.py
